[FIX] 부품 관리 기능 수정